<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="title">My Nanodegree Apps!</string>

    <string name="button_spotify_streamer">Spotify Streamer</string>
    <string name="button_football_scored_app">Football Scores App</string>
    <string name="button_library_app">Library App</string>
    <string name="button_build_it_bigger">Build It Bigger</string>
    <string name="button_xyz_reader">XYZ Reader</string>
    <string name="button_capstone">Capstone: My Own App</string>

    <string name="toast_spotify_streamer">This button will launch my Spotify Streamer app!</string>
    <string name="toast_football_scored_app">This button will launch my Football Scores app!</string>
    <string name="toast_library_app">This button will launch my Library app!</string>
    <string name="toast_build_it_bigger">This button will launch my Build It Bigger app!</string>
    <string name="toast_xyz_reader">This button will launch my XYZ Reader app!</string>
    <string name="toast_capstone">This button will launch my Capstone app!</string>
</resources>
